--- a/p_interpolacion.ipynb
+++ b/p_interpolacion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "83ebd3a4",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "7877389e",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "b20622cb",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "0e41598f",
    "metadata": {},
    "outputs": [
@@ -352,8 +352,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[02-12 14:59:16][INFO][ANTHO_A] Se ajustarán 2 parámetros.\n",
-      "[02-12 14:59:16][INFO][ANTHO_A] \n",
+      "[02-12 15:46:01][INFO][ANTHO_A] Se ajustarán 2 parámetros.\n",
+      "[02-12 15:46:01][INFO][ANTHO_A] \n",
       "[[ 443.4         100.          545.4       ]\n",
       " [   0.         -193.00505187 -967.12315291]]\n"
      ]
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "id": "7c99286d",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "np.float64(0.09993919029138609)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
+   "id": "2402d9d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.010869630247994)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "04da0820",
    "metadata": {},
    "outputs": [
@@ -430,223 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "9b67e7ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xs = [\n",
-    "4.1,\n",
-    "3.6,\n",
-    "3.3,\n",
-    "0.2,\n",
-    "9.8,\n",
-    "9.5,\n",
-    "3.2,\n",
-    "5.8,\n",
-    "0.7,\n",
-    "4.2,\n",
-    "5.4,\n",
-    "6.3,\n",
-    "0.3,\n",
-    "1.0,\n",
-    "9.3,\n",
-    "2.4,\n",
-    "4.7,\n",
-    "8.8,\n",
-    "5.2,\n",
-    "5.6,\n",
-    "4.8,\n",
-    "9.7,\n",
-    "7.5,\n",
-    "0.7,\n",
-    "8.2,\n",
-    "0.6,\n",
-    "2.3,\n",
-    "8.4,\n",
-    "0.4,\n",
-    "1.6,\n",
-    "1.5,\n",
-    "9.6,\n",
-    "6.6,\n",
-    "0.9,\n",
-    "8.2,\n",
-    "5.5,\n",
-    "9.4,\n",
-    "4.3,\n",
-    "6.4,\n",
-    "3.3,\n",
-    "2.8,\n",
-    "3.3,\n",
-    "0.9,\n",
-    "5.8,\n",
-    "4.3,\n",
-    "1.0,\n",
-    "5.4,\n",
-    "8.0,\n",
-    "8.6,\n",
-    "4.0,\n",
-    "8.9,\n",
-    "3.0,\n",
-    "9.2,\n",
-    "3.3,\n",
-    "8.9,\n",
-    "2.3,\n",
-    "1.9,\n",
-    "3.5,\n",
-    "4.3,\n",
-    "5.8,\n",
-    "8.9,\n",
-    "0.7,\n",
-    "5.8,\n",
-    "6.2,\n",
-    "2.4,\n",
-    "1.5,\n",
-    "0.2,\n",
-    "3.1,\n",
-    "6.2,\n",
-    "4.5,\n",
-    "3.1,\n",
-    "1.3,\n",
-    "2.0,\n",
-    "#-200.0,\n",
-    "0.4,\n",
-    "5.4,\n",
-    "4.6,\n",
-    "0.6,\n",
-    "1.6,\n",
-    "1.9,\n",
-    "2.2,\n",
-    "6.4,\n",
-    "1.1,\n",
-    "7.9,\n",
-    "8.1,\n",
-    "3.8,\n",
-    "1.1,\n",
-    "3.0,\n",
-    "5.6,\n",
-    "5.4,\n",
-    "0.3,\n",
-    "8.3,\n",
-    "8.5,\n",
-    "5.3,\n",
-    "1.5,\n",
-    "0.9,\n",
-    "2.7,\n",
-    "3.0,\n",
-    "8.0,\n",
-    "2.0,\n",
-    "9.4\n",
-    "]\n",
-    "\n",
-    "ys = [\n",
-    "5.4,\n",
-    "5.4,\n",
-    "5.3,\n",
-    "5.0,\n",
-    "6.1,\n",
-    "6.0,\n",
-    "5.3,\n",
-    "5.5,\n",
-    "5.2,\n",
-    "5.4,\n",
-    "5.7,\n",
-    "5.7,\n",
-    "5.1,\n",
-    "5.3,\n",
-    "5.7,\n",
-    "5.2,\n",
-    "5.5,\n",
-    "6.0,\n",
-    "5.5,\n",
-    "5.7,\n",
-    "5.5,\n",
-    "6.1,\n",
-    "5.9,\n",
-    "5.1,\n",
-    "5.9,\n",
-    "5.0,\n",
-    "5.3,\n",
-    "5.6,\n",
-    "5.1,\n",
-    "5.1,\n",
-    "5.1,\n",
-    "6.0,\n",
-    "5.5,\n",
-    "5.0,\n",
-    "6.1,\n",
-    "5.5,\n",
-    "5.9,\n",
-    "5.4,\n",
-    "5.6,\n",
-    "5.5,\n",
-    "5.3,\n",
-    "5.2,\n",
-    "5.3,\n",
-    "5.7,\n",
-    "5.5,\n",
-    "5.1,\n",
-    "5.5,\n",
-    "5.9,\n",
-    "5.8,\n",
-    "5.4,\n",
-    "5.8,\n",
-    "5.4,\n",
-    "5.9,\n",
-    "5.3,\n",
-    "5.9,\n",
-    "5.1,\n",
-    "5.1,\n",
-    "5.5,\n",
-    "5.4,\n",
-    "5.5,\n",
-    "5.9,\n",
-    "5.1,\n",
-    "5.6,\n",
-    "5.7,\n",
-    "5.3,\n",
-    "5.1,\n",
-    "5.1,\n",
-    "5.3,\n",
-    "5.6,\n",
-    "5.4,\n",
-    "5.3,\n",
-    "5.1,\n",
-    "5.3,\n",
-    "#500,\n",
-    "5.1,\n",
-    "5.5,\n",
-    "5.6,\n",
-    "4.9,\n",
-    "5.2,\n",
-    "5.2,\n",
-    "5.4,\n",
-    "5.5,\n",
-    "5.0,\n",
-    "5.8,\n",
-    "5.6,\n",
-    "5.3,\n",
-    "4.9,\n",
-    "5.4,\n",
-    "5.6,\n",
-    "5.5,\n",
-    "5.1,\n",
-    "6.1,\n",
-    "5.8,\n",
-    "5.6,\n",
-    "5.1,\n",
-    "5.1,\n",
-    "5.3,\n",
-    "5.3,\n",
-    "5.7,\n",
-    "5.2,\n",
-    "6.0\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "id": "91dcfe26",
    "metadata": {},
    "outputs": [
@@ -691,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "id": "3a766b82",
    "metadata": {},
    "outputs": [
